--- a/src/components/homeNoAuth/headerNoAuth/styles.module.scss
+++ b/src/components/homeNoAuth/headerNoAuth/styles.module.scss
@@ -12,3 +12,58 @@
 .imgCta {
   width: 20px;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+
+  flex-wrap: wrap;
+
+  margin-top: 20px;
+}
+
+.imgLogoNav {
+  width: 180px;
+}
+
+.navBtn {
+  margin: 0px 5px;
+  background-color: transparent;
+  border-color: transparent;
+  color: $lightGray;
+
+  transition: 0.5s;
+
+  &:hover {
+    border-color: $lightRed;
+    color: #ffffff;
+    background-color: transparent;
+  }
+}
+
+@media (max-width: 450px) {
+  .nav {
+    justify-content: center;
+  }
+
+  .navBtn {
+    margin: 16px 10px;
+    border-color: #ffffff;
+    font-size: 14px;  
+  }
+
+  .ctaSection {
+    gap: 10px;
+  }
+}
+
+@media (max-width: 360px) {
+  .ctaSection {
+    text-align: center;
+  }
+
+  .imgCta {
+    margin: 0px 8px;
+  }
+}
+
