--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -66,14 +66,14 @@
   font-weight: bold;
 }
 
-.fullNameDiv {
+.inputFlexDiv {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 50px;
 }
 
-.fullNameInput {
+.inputFlex {
   width: 250px;
   background-color: transparent;
   border: 1px solid $darkGray;
@@ -92,7 +92,7 @@
   }
 }
 
-.phoneAndEmailDiv {
+.inputNormalDiv {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,7 +102,7 @@
 }
 
 .input {
-  @extend .fullNameInput;
+  @extend .inputFlex;
   text-transform: lowercase;
   width: 550px;
 }
@@ -139,10 +139,20 @@
   margin: 0 auto;
   padding: 14px 0px;
 
+
+  &:active {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  &:focus {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
   &:hover {
     background-color: transparent;
-    border-color: $lightRed;
-    color: $lightGray;
+    color: $lightRed;
   }
 }
 
@@ -162,11 +172,11 @@
 }
 
 @media (max-width: 767px) {
-  .fullNameDiv {
+  .inputNormalDiv {
     gap: 20px;
   }
 
-  .fullNameInput {
+  .inputFlex {
     width: 400px;
   }
 }
@@ -187,7 +197,7 @@
     font-size: 25px;
   }
   
-  .fullNameInput {
+  .inputFlex {
     width: 100%;
   }
 }
